DesafioPricing/force-app/main/default/objects/Margem__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para país.</description>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Margins</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <type>Lookup</type>
</CustomField>