DesafioPricing/force-app/main/default/objects/Margem__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup para Centro de Distribuição.</description>
    <label>DistributionCenter</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Margins</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>