DesafioPricing/force-app/main/default/objects/Margem__c/fields/MargemCode__c.field-meta.xml
<CustomField>
    <fullName>MargemCode__c</fullName>
    <description>Código único de margem.</description>
    <externalId>true</externalId>
    <label>MargemCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>