DesafioPricing/force-app/main/default/objects/Margem__c/fields/MarginValue__c.field-meta.xml
<CustomField>
    <fullName>MarginValue__c</fullName>
    <description>Valor da margem.</description>
    <label>MarginValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>