DesafioPricing/force-app/main/default/objects/Margem__c/fields/MarginValuePercent__c.field-meta.xml
<CustomField>
    <fullName>MarginValuePercent__c</fullName>
    <description>Percentual da margem.</description>
    <label>MarginValuePercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>