DesafioPricing/force-app/main/default/objects/Margem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para produto.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Margins</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <type>Lookup</type>
</CustomField>