DesafioPricing/force-app/main/default/objects/Margem__c/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para Hierarquia do produto.</description>
    <label>ProductHierarchy</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Margins</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <type>Lookup</type>
</CustomField>