DesafioPricing/force-app/main/default/objects/Margem__c/validationRules/Margem_ativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Margem_ativa</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Approved&quot;) &amp;&amp; 
(ISCHANGED(MarginValuePercent__c) || ISCHANGED(Product__c) || ISCHANGED(ProductHierarchy__c) || ISCHANGED(State__c) || ISCHANGED(City__c) || ISCHANGED(Country__c)|| ISCHANGED(Account__c) || ISCHANGED(AccountGroup__c))</errorConditionFormula>
    <errorMessage>Não é possível alterar uma Margem que já está com o status Ativo. Desative-a ou crie uma nova regra.</errorMessage>
</ValidationRule>