DesafioPricing/force-app/main/default/objects/Margem__c/validationRules/obrigatorio_conta_ou_accountGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>obrigatorio_conta_ou_accountGroup</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(ISBLANK(Account__c), ISBLANK(AccountGroup__c)),
    AND(NOT(ISBLANK(Account__c)), NOT(ISBLANK(AccountGroup__c)))
)</errorConditionFormula>
    <errorMessage>Informe apenas a Conta OU o Grupo de Contas, nunca ambos ou nenhum deles.</errorMessage>
</ValidationRule>