DesafioPricing/force-app/main/default/objects/Margem__c/validationRules/Required_Product_or_Hierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Product_or_Hierarchy</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(ISBLANK(Product__c), ISBLANK(ProductHierarchy__c)),
    AND(NOT(ISBLANK(Product__c)), NOT(ISBLANK(ProductHierarchy__c)))
)</errorConditionFormula>
    <errorMessage>Você deve informar um Produto OU uma Hierarquia de Produto, mas nunca os dois ao mesmo tempo ou nenhum deles.</errorMessage>
</ValidationRule>